# sdto

./: Dockerfile  LICENSE  README.md  pyproject.toml
sdto/: __init__.py  __main__.py  sdto.py
