[tool.poetry]
name = "sdto"
version = "0.1.0"
description = "Subdomain takeover finder"
authors = ["godpleaseno <zfrty@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.3"

[tool.poetry.group.cli]
optional = true

[tool.poetry.group.cli.dependencies]
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
click = "^8.1.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
