[tool.poetry]
name = "sdto"
version = "0.1.6"
description = "Subdomain takeover finder"
authors = ["godpleaseno <zfrty@protonmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/scanfactory/sdto"
homepage = "https://github.com/scanfactory/sdto"
keywords = [
    "subdomain-takeover",
    "scanner",
    "cybersecurity",
    "security",
    "takeover",
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.3"

[tool.poetry.group.cli]
optional = true

[tool.poetry.group.cli.dependencies]
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
click = "^8.1.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
